Good progress on getting new About AddInfo running.  Need to add more assemblies.

--- a/VNCVisioTools/VNCVisioToolsApplication/Resources/Xaml/Application.xaml
+++ b/VNCVisioTools/VNCVisioToolsApplication/Resources/Xaml/Application.xaml
@@ -13,6 +13,8 @@
 
         <!-- The order is important as things must be declared before used. -->
 
+        <ResourceDictionary Source="Display_StylesAndTemplates.xaml" />
+        
         <ResourceDictionary Source="Layout_Styles.xaml"/>
 
         <!-- TODO(crhodes)
